--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,15 @@
     cursor: not-allowed;
 }
 
-a.button,
-button:not(.notlink) {
-    @apply cursor-pointer rounded-lg border-2 border-slate-500 bg-slate-800 text-white transition duration-200 hover:bg-slate-700
+a.custom,
+button.custom {
+    @apply inline-flex w-full justify-center rounded-md bg-slate-500 text-sm font-semibold text-white hover:bg-slate-400 sm:w-auto
+}
+
+main.main_layout {
+    @apply flex-1 overflow-y-auto p-4 bg-gradient-to-r to-slate-900 from-slate-700;
+}
+
+main.main_layout form {
+    @apply p-6 border-1 border-slate-500 rounded-md shadow-2xl;
 }
