--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,6 +21,7 @@ main.main_layout {
     @apply flex-1 overflow-y-auto p-4 bg-gradient-to-r to-slate-900 from-slate-700;
 }
 
+.card,
 main.main_layout form {
     @apply p-6 border-1 border-slate-500 rounded-md shadow-2xl;
 }
