--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@ button.custom {
 }
 
 main.main_layout {
-    @apply flex-1 overflow-y-auto p-4 bg-gradient-to-r to-slate-900 from-slate-700;
+    @apply flex-1 overflow-y-auto p-4 pb-0 bg-gradient-to-r to-slate-900 from-slate-700;
 }
 
 .card,
